Fixes layout bug with voice command list on onboarding page.

--- a/extension/onboarding/onboarding.css
+++ b/extension/onboarding/onboarding.css
@@ -203,6 +203,7 @@ p {
   font-weight: 400;
   font-size: 24px;
   list-style: none;
+  padding: 0;
 }
 
 #try-it ul li {
